// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OakDownloadCard matches snapshot with fileSizeSlot 1`] = `
.c0 {
  overflow: hidden;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c13 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c14 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c16 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c22 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c24 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c9 {
  object-fit: contain;
}

.c25 {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 0.25rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c18:checked {
  background: #222222;
  border-color: #222222;
}

.c18:disabled {
  pointer-events: none;
}

.c20:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%);
}

.c23 {
  pointer-events: none;
  opacity: 0;
}

input:checked + .c21 {
  opacity: 1;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  cursor: pointer;
}

.c2:has(input:focus-within):focus-visible box-shadow:0px 0px 0px 2px function (_a) {
  -webkit-var: theme = _a.theme;
  -moz-var: theme = _a.theme;
  -ms-var: theme = _a.theme;
  var: theme = _a.theme;
  -webkit-var: c = theme.uiColors[value];
  -moz-var: c = theme.uiColors[value];
  -ms-var: c = theme.uiColors[value];
  var: c = theme.uiColors[value];
  return: color_1.oakColorTokens[c];
}

.c2:has(input:focus-within):focus-visible,
.c2:has(input:focus-within):focus-visible 0px 0px 0px 5px function (_a) {
  -webkit-var: theme = _a.theme;
  -moz-var: theme = _a.theme;
  -ms-var: theme = _a.theme;
  var: theme = _a.theme;
  -webkit-var: c = theme.uiColors[value];
  -moz-var: c = theme.uiColors[value];
  -ms-var: c = theme.uiColors[value];
  var: c = theme.uiColors[value];
  return: color_1.oakColorTokens[c];
}

@media (hover:hover) {
  .c18:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover:hover) {
  .c19:hover:not(.c17:checked):not(.c17:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover:hover) {
  .c2:hover:not(:disabled,:active) {
    background: #f2f2f2;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
          >
            TITLE
          </div>
          <div
            class="c13"
          >
            FILE_SIZE
          </div>
          <div
            class="c13"
          >
            FORMAT
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c14 c15"
        >
          <div
            class="c16"
          >
            <input
              class="c17 c18 c19 c20"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c21 c22 c23"
            >
              <div
                class="c24"
              >
                <img
                  alt=""
                  class="c25"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`OakDownloadCard matches snapshot without fileSizeSlot 1`] = `
.c0 {
  overflow: hidden;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c13 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c14 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c16 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c22 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c24 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c9 {
  object-fit: contain;
}

.c25 {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 0.25rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c18:checked {
  background: #222222;
  border-color: #222222;
}

.c18:disabled {
  pointer-events: none;
}

.c20:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%);
}

.c23 {
  pointer-events: none;
  opacity: 0;
}

input:checked + .c21 {
  opacity: 1;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  cursor: pointer;
}

.c2:has(input:focus-within):focus-visible box-shadow:0px 0px 0px 2px function (_a) {
  -webkit-var: theme = _a.theme;
  -moz-var: theme = _a.theme;
  -ms-var: theme = _a.theme;
  var: theme = _a.theme;
  -webkit-var: c = theme.uiColors[value];
  -moz-var: c = theme.uiColors[value];
  -ms-var: c = theme.uiColors[value];
  var: c = theme.uiColors[value];
  return: color_1.oakColorTokens[c];
}

.c2:has(input:focus-within):focus-visible,
.c2:has(input:focus-within):focus-visible 0px 0px 0px 5px function (_a) {
  -webkit-var: theme = _a.theme;
  -moz-var: theme = _a.theme;
  -ms-var: theme = _a.theme;
  var: theme = _a.theme;
  -webkit-var: c = theme.uiColors[value];
  -moz-var: c = theme.uiColors[value];
  -ms-var: c = theme.uiColors[value];
  var: c = theme.uiColors[value];
  return: color_1.oakColorTokens[c];
}

@media (hover:hover) {
  .c18:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover:hover) {
  .c19:hover:not(.c17:checked):not(.c17:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover:hover) {
  .c2:hover:not(:disabled,:active) {
    background: #f2f2f2;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
          >
            TITLE
          </div>
          <div
            class="c13"
          >
            FORMAT
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c14 c15"
        >
          <div
            class="c16"
          >
            <input
              class="c17 c18 c19 c20"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c21 c22 c23"
            >
              <div
                class="c24"
              >
                <img
                  alt=""
                  class="c25"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
